objects/copado__Feature_Toggle__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Custom_Permission_Name__c</fullName>
        <label>Custom Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Feature_Toggle_Group__c</fullName>
        <label>Feature Toggle Group</label>
        <referenceTo>copado__Feature_Toggle_Group__mdt</referenceTo>
        <relationshipLabel>Feature Toggles</relationshipLabel>
        <relationshipName>Feature_Toggles</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>copado__Full_Description__c</fullName>
        <label>Full Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature Toggle</label>
    <listViews>
        <fullName>copado__All_Feature_Toggles</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>copado__Order__c</columns>
        <columns>copado__Short_Description__c</columns>
        <columns>copado__Feature_Toggle_Group__c</columns>
        <columns>copado__Custom_Permission_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All Feature Toggles</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Feature Toggles</pluralLabel>
</CustomObject>